--- a/app/src/main/res/layout/activity_panitia_dash.xml
+++ b/app/src/main/res/layout/activity_panitia_dash.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <androidx.drawerlayout.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -8,7 +7,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:id="@+id/drawerLayout"
-    tools:context=".dashboard.SuperAdmin_DashActivity">
+    tools:context=".dashboard.PanitiaDashActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -29,6 +28,7 @@
                 android:orientation="vertical"
                 >
 
+                <!--Tampilan DashBord-->
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -64,7 +64,7 @@
 
                 </LinearLayout>
 
-                <!-- Cardview-->
+                <!-- Cardview Pelatihan-->
 
                 <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
@@ -116,9 +116,7 @@
                                 android:src="@drawable/logo" />
 
                         </RelativeLayout>
-
                     </LinearLayout>
-
                 </androidx.cardview.widget.CardView>
 
                 <!--Cardview Menu 1-->
@@ -130,116 +128,6 @@
                     android:layout_marginRight="16dp"
                     android:weightSum="2"
                     android:orientation="horizontal">
-
-                    <androidx.cardview.widget.CardView
-                        android:layout_weight="1"
-                        android:layout_width="match_parent"
-                        android:layout_height="120dp"
-                        android:layout_margin="5dp"
-                        android:clickable="true"
-                        android:foreground="?android:attr/selectableItemBackground"
-                        app:cardCornerRadius="3dp"
-                        app:cardElevation="3dp">
-
-                        <RelativeLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:padding="3dp">
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="Diklat"
-                                android:textColor="#5e5e5e"
-                                android:textSize="18dp" />
-
-                            <ImageView
-                                android:layout_width="120dp"
-                                android:layout_height="90dp"
-                                android:layout_alignParentRight="true"
-                                android:layout_alignParentBottom="true"
-                                android:src="@drawable/ic_diklat" />
-
-                        </RelativeLayout>
-
-                    </androidx.cardview.widget.CardView>
-
-                    <androidx.cardview.widget.CardView
-                        android:layout_weight="1"
-                        android:layout_width="match_parent"
-                        android:layout_height="120dp"
-                        android:layout_margin="5dp"
-                        android:clickable="true"
-                        android:foreground="?android:attr/selectableItemBackground"
-                        app:cardCornerRadius="3dp"
-                        app:cardElevation="3dp">
-
-                        <RelativeLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:padding="3dp">
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="Pegawai"
-                                android:textColor="#5e5e5e"
-                                android:textSize="18dp" />
-
-                            <ImageView
-                                android:layout_width="120dp"
-                                android:layout_height="90dp"
-                                android:layout_alignParentRight="true"
-                                android:layout_alignParentBottom="true"
-                                android:src="@drawable/ic_employees" />
-
-                        </RelativeLayout>
-                    </androidx.cardview.widget.CardView>
-
-                </LinearLayout>
-
-                <!--Cardview Menu 2-->
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginRight="16dp"
-                    android:weightSum="2"
-                    android:orientation="horizontal">
-
-                    <androidx.cardview.widget.CardView
-                        android:layout_weight="1"
-                        android:layout_width="match_parent"
-                        android:layout_height="120dp"
-                        android:layout_margin="5dp"
-                        android:clickable="true"
-                        android:foreground="?android:attr/selectableItemBackground"
-                        app:cardCornerRadius="3dp"
-                        app:cardElevation="3dp">
-
-                        <RelativeLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:padding="3dp">
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="Pengajar"
-                                android:textColor="#5e5e5e"
-                                android:textSize="18dp" />
-
-                            <ImageView
-                                android:layout_width="120dp"
-                                android:layout_height="90dp"
-                                android:layout_alignParentRight="true"
-                                android:layout_alignParentBottom="true"
-                                android:src="@drawable/ic_pengajar" />
-
-                        </RelativeLayout>
-
-                    </androidx.cardview.widget.CardView>
 
                     <androidx.cardview.widget.CardView
                         android:layout_weight="1"
@@ -274,18 +162,6 @@
 
                     </androidx.cardview.widget.CardView>
 
-                </LinearLayout>
-
-                <!--Cardview Menu 3-->
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginRight="16dp"
-                    android:weightSum="2"
-                    android:orientation="horizontal">
-
                     <androidx.cardview.widget.CardView
                         android:layout_weight="1"
                         android:layout_width="match_parent"
@@ -314,9 +190,22 @@
                                 android:layout_alignParentRight="true"
                                 android:layout_alignParentBottom="true"
                                 android:src="@drawable/ic_student" />
+
                         </RelativeLayout>
 
                     </androidx.cardview.widget.CardView>
+
+                </LinearLayout>
+
+                <!--Cardview Menu 2-->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="16dp"
+                    android:weightSum="2"
+                    android:orientation="horizontal">
 
                     <androidx.cardview.widget.CardView
                         android:layout_weight="1"
@@ -336,7 +225,7 @@
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="Panitia"
+                                android:text="Absensi Peserta"
                                 android:textColor="#5e5e5e"
                                 android:textSize="18dp" />
 
@@ -345,21 +234,10 @@
                                 android:layout_height="90dp"
                                 android:layout_alignParentRight="true"
                                 android:layout_alignParentBottom="true"
-                                android:src="@drawable/ic_panitia" />
+                                android:src="@drawable/ic_absen" />
                         </RelativeLayout>
+
                     </androidx.cardview.widget.CardView>
-
-                </LinearLayout>
-
-                <!--Cardview Menu 4-->
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginRight="16dp"
-                    android:weightSum="2"
-                    android:orientation="horizontal">
 
                     <androidx.cardview.widget.CardView
                         android:layout_weight="1"
@@ -389,85 +267,6 @@
                                 android:layout_alignParentRight="true"
                                 android:layout_alignParentBottom="true"
                                 android:src="@drawable/ic_value" />
-
-                        </RelativeLayout>
-                    </androidx.cardview.widget.CardView>
-
-                    <androidx.cardview.widget.CardView
-                        android:layout_weight="1"
-                        android:layout_width="match_parent"
-                        android:layout_height="120dp"
-                        android:layout_margin="5dp"
-                        android:clickable="true"
-                        android:foreground="?android:attr/selectableItemBackground"
-                        app:cardCornerRadius="3dp"
-                        app:cardElevation="3dp">
-
-                        <RelativeLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:padding="3dp">
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="Absen"
-                                android:textColor="#5e5e5e"
-                                android:textSize="18dp" />
-
-                            <ImageView
-                                android:layout_width="120dp"
-                                android:layout_height="90dp"
-                                android:layout_alignParentRight="true"
-                                android:layout_alignParentBottom="true"
-                                android:src="@drawable/ic_absen" />
-
-                        </RelativeLayout>
-                    </androidx.cardview.widget.CardView>
-
-                </LinearLayout>
-
-                <!--Cardview Menu 5-->
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginRight="16dp"
-                    android:weightSum="2"
-                    android:orientation="horizontal">
-
-                    <androidx.cardview.widget.CardView
-                        android:layout_weight="1"
-                        android:layout_width="match_parent"
-                        android:layout_height="120dp"
-                        android:layout_margin="5dp"
-                        android:clickable="true"
-                        android:foreground="?android:attr/selectableItemBackground"
-                        app:cardCornerRadius="3dp"
-                        app:cardElevation="3dp">
-
-                        <RelativeLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:padding="3dp">
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:text="Jadwal Pelatihan"
-                                android:textColor="#5e5e5e"
-                                android:layout_marginLeft="30dp"
-                                android:textSize="18dp" />
-
-                            <ImageView
-                                android:layout_width="120dp"
-                                android:layout_height="90dp"
-                                android:layout_marginRight="100dp"
-                                android:layout_alignParentRight="true"
-                                android:layout_alignParentBottom="true"
-                                android:src="@drawable/ic_schedule" />
-
                         </RelativeLayout>
                     </androidx.cardview.widget.CardView>
 
@@ -486,7 +285,6 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/nav_view"
         android:layout_width="wrap_content"
@@ -497,6 +295,5 @@
         android:fitsSystemWindows="true"
         />
 
+
 </androidx.drawerlayout.widget.DrawerLayout>
-
-
