--- a/app/src/main/res/layout/activity_pegawai.xml
+++ b/app/src/main/res/layout/activity_pegawai.xml
@@ -4,13 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activity.DiklatActivity">
+    tools:context=".Activity.PegawaiActivity">
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/txtlay_diklat"
+        android:id="@+id/txtlay_pegawai"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Cari Nama Diklat..."
+        android:hint="Cari Pegawai..."
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -19,14 +19,12 @@
         android:layout_marginVertical="10dp"
         app:startIconDrawable="@drawable/ic_search"
         >
-
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/txt_cari"
+            android:id="@+id/txt_cari_pegawai"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="text"
+            android:inputType="number"
             />
-
     </com.google.android.material.textfield.TextInputLayout>
 
     <FrameLayout
@@ -38,10 +36,10 @@
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginTop="5dp"
         android:id="@+id/fl_data_diklat"
-        app:layout_constraintTop_toBottomOf="@+id/txtlay_diklat" />
+        app:layout_constraintTop_toBottomOf="@+id/txtlay_pegawai" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/btn_add_diklat"
+        android:id="@+id/btn_add_pegawai"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="15dp"
