--- a/app/src/main/res/layout/fragment_data_pegawai.xml
+++ b/app/src/main/res/layout/fragment_data_pegawai.xml
@@ -3,16 +3,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.DataDiklatFragment">
+    tools:context=".fragment.DataPegawaiFragment">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_data_diklat"
+        android:id="@+id/rv_data_pegawai"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         tools:itemCount="100" />
 
     <ProgressBar
-        android:id="@+id/progress_bar_diklat"
+        android:id="@+id/progress_bar_pegawai"
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
