menambahkan tampilan panitia,pengajar,asisten tpi untuk jadwal,nilai dan absen baru activity blm ada tampilan karena masih bingung

--- a/app/src/main/res/layout/activity_diklat.xml
+++ b/app/src/main/res/layout/activity_diklat.xml
@@ -21,7 +21,7 @@
         >
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/txt_cari"
+            android:id="@+id/txt_cari_diklat"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="text"
