--- a/app/src/main/res/layout/activity_asisten.xml
+++ b/app/src/main/res/layout/activity_asisten.xml
@@ -4,13 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activity.PegawaiActivity">
+    tools:context=".Activity.AsistenActivity">
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/txtlay_pegawai"
+        android:id="@+id/txtlay_asisten"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Cari Pegawai..."
+        android:hint="Cari Asisten..."
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -19,12 +19,14 @@
         android:layout_marginVertical="10dp"
         app:startIconDrawable="@drawable/ic_search"
         >
+
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/txt_cari_pegawai"
+            android:id="@+id/txt_cari_asisten"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="number"
+            android:inputType="text"
             />
+
     </com.google.android.material.textfield.TextInputLayout>
 
     <FrameLayout
@@ -35,11 +37,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginTop="5dp"
-        android:id="@+id/fl_data_pegawai"
-        app:layout_constraintTop_toBottomOf="@+id/txtlay_pegawai" />
+        android:id="@+id/fl_data_asisten"
+        app:layout_constraintTop_toBottomOf="@+id/txtlay_asisten" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/btn_add_pegawai"
+        android:id="@+id/btn_add_asisten"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="15dp"
