--- a/app/src/main/res/layout/activity_panitia.xml
+++ b/app/src/main/res/layout/activity_panitia.xml
@@ -6,4 +6,51 @@
     android:layout_height="match_parent"
     tools:context=".Activity.PanitiaActivity">
 
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/txtlay_panitia_external"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Cari Nama Panitia External"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginVertical="10dp"
+        app:startIconDrawable="@drawable/ic_search"
+        >
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/txt_cari_panitia_external"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="text"
+            />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginHorizontal="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="5dp"
+        android:id="@+id/fl_data_panitia_external"
+        app:layout_constraintTop_toBottomOf="@+id/txtlay_panitia_external" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/btn_add_panitia_external"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="15dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:src="@drawable/ic_add"
+        android:tint="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
