--- a/app/src/main/res/layout/activity_pengajar_dash.xml
+++ b/app/src/main/res/layout/activity_pengajar_dash.xml
@@ -194,6 +194,52 @@
 
                 </LinearLayout>
 
+                <!--Cardview Menu 2-->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="16dp"
+                    android:weightSum="2"
+                    android:orientation="horizontal">
+
+                    <androidx.cardview.widget.CardView
+                        android:layout_weight="1"
+                        android:layout_width="match_parent"
+                        android:layout_height="120dp"
+                        android:layout_margin="5dp"
+                        android:clickable="true"
+                        android:foreground="?android:attr/selectableItemBackground"
+                        app:cardCornerRadius="3dp"
+                        app:cardElevation="3dp">
+
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:padding="3dp">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="Jadwal Pelatihan"
+                                android:textColor="#5e5e5e"
+                                android:layout_marginLeft="30dp"
+                                android:textSize="18dp" />
+
+                            <ImageView
+                                android:layout_width="120dp"
+                                android:layout_height="90dp"
+                                android:layout_marginRight="100dp"
+                                android:layout_alignParentRight="true"
+                                android:layout_alignParentBottom="true"
+                                android:src="@drawable/ic_schedule" />
+
+                        </RelativeLayout>
+                    </androidx.cardview.widget.CardView>
+
+                </LinearLayout>
+
                 <!--Text dibawah-->
                 <TextView
                     android:layout_width="match_parent"
